--- a/_source/case-studies.njk
+++ b/_source/case-studies.njk
@@ -9,7 +9,8 @@ title: Case studies
   {{ c.card({
     title: study.data.title,
     url: study.url,
-    content: study.data.preface
+    content: study.data.preface,
+    cta: study.data.cta
   }) }}
 {%- endfor -%}
 </div>
