--- a/_source/case-studies/onalytica.njk
+++ b/_source/case-studies/onalytica.njk
@@ -7,6 +7,7 @@ roles:
   - Hands-on design and code
   - Pattern library creation
 color: green
+cta: 'See how I helped Onalytica'
 cover: 
 preface: |
   I helped Onalytica's design and product teams improve processes and kick-start a standardised approach to interface design.
