--- a/_source/case-studies/firefly.njk
+++ b/_source/case-studies/firefly.njk
@@ -7,6 +7,7 @@ roles:
   - Hands-on design and code
   - Management team
 color: red
+cta: 'See how I helped Firefly'
 preface: |
   For 4 years I led the design team at Firefly Learning. We helped thousands of teachers, students and parents to teach and learn from anywhere.
 images:
