--- a/_source/index.njk
+++ b/_source/index.njk
@@ -7,9 +7,9 @@ hero:
 {% import "./_includes/components.njk" as c %}
 {# set copy #}
 {% set introduction %}
-One good idea can transform a business from mediocre to extraordinary. Yet, many regard creativity as the preserve of artists and designers. I believe that anyone is capable of exceptional ideas — regardless of what job they do.
+Good ideas transform businesses. Yet, many regard creativity as the preserve of artists and designers. I believe that anyone is capable of exceptional ideas — regardless of who they are or what they do.
 
-I help people unleash their creative potential, not by relying on unlikely "eureka" moments but through a systematic approach.  Unexpected ideas then become a natural output of the process.
+I help people unleash their creative potential. But I don't rely on unlikely "eureka" moments. Instead,  I teach a systematic approach to creative thinking. Great ideas are simply an inevitable outcome of the process.
 {% endset %}
 
 <section class="container">
