improved container padding

--- a/_source/case-studies/onalytica.njk
+++ b/_source/case-studies/onalytica.njk
@@ -73,7 +73,7 @@ All the components compose together, so the pattern library can also be used to 
 {% endset %}
 
 {# render page #}
-<section class="container space--grande" id="discovery">
+<section class="space--grande" id="discovery">
   <div class="grid">
     <h2 class="marker marker--number space--pico"><a href="#discovery">Discovery</a></h2>
   </div>
@@ -82,7 +82,7 @@ All the components compose together, so the pattern library can also be used to 
     {{ c.image(images.testing.url, images.testing.caption, ['bleed-start','bleed-end']) }}
   </div>
 </section>
-<section class="container space--grande" id="refining">
+<section class="space--grande" id="refining">
   <div class="grid">
     <h2 class="marker marker--number space--pico"><a href="#refining">Refining Onalytica's design process</a></h2>
   </div>
@@ -93,7 +93,7 @@ All the components compose together, so the pattern library can also be used to 
     {{ c.gallery(images.slides.urls,images.slides.caption,['bleed-start','bleed-end','stage']) }}
   </div>
 </section>
-<section class="container space--grande">
+<section class="space--grande">
   <div class="grid grid--cinched">
     {{ c.quote(
       'Jon has improved our processes, leading to better integration of design into the business. Through his time with us, Jon raised the visibility of design across the company, making it easier to engage with stakeholders.',
@@ -101,7 +101,7 @@ All the components compose together, so the pattern library can also be used to 
     ) }}
   </div>
 </section>
-<section class="container space--grande" id="designCode">
+<section class="space--grande" id="designCode">
   <div class="grid">
     <h2 class="marker marker--number space--pico"><a href="#designCode">From design to code</a></h2>
   </div>
@@ -116,7 +116,7 @@ All the components compose together, so the pattern library can also be used to 
       ) }}
   </div>
 </section>
-<section class="container space--grande container--decoration-highlight" id="outcomes">
+<section class="space--grande container--decoration-highlight" id="outcomes">
   <div class="grid">
     <h2 class="marker marker--number space--pico"><a href="#outcomes">Outcomes</a></h2>
   </div>
@@ -124,7 +124,7 @@ All the components compose together, so the pattern library can also be used to 
     {{ c.outcomes(outcomes) }}
   </div>
 </section>
-<section class="container space--grande">
+<section class="space--grande">
   <div class="grid grid--cinched">
     {{ c.quote(
       'Jon is a great communicator and steered us through the UX options and decisions to plan work effectively. We’re delighted with the results - both technically and creatively.',
