--- a/_source/case-studies/firefly.njk
+++ b/_source/case-studies/firefly.njk
@@ -148,7 +148,7 @@ Sometimes this created the need for new components. If that happened, we'd discu
 {% endset %}
 
 {# render page #}
-<section class="container space--grande">
+<section class="space--grande">
   <div class="grid grid--full">
     {{ c.screenshots(
       laptop=images.hero.laptop,
@@ -158,7 +158,7 @@ Sometimes this created the need for new components. If that happened, we'd discu
     )}}
   </div>
 </section>
-<section class="container space--grande" id="definingDesign">
+<section class="space--grande" id="definingDesign">
   <div class="grid">
     <h2 class="marker marker--number space--pico"><a href="#definingDesign">Defining design</a></h2>
   </div>
@@ -172,7 +172,7 @@ Sometimes this created the need for new components. If that happened, we'd discu
     {{ c.prose(definingDesign2) }}
   </div>
 </section>
-<section class="container space--grande" id="supportingDesigners">
+<section class="space--grande" id="supportingDesigners">
   <div class="grid">
     <h2 class="marker marker--number space--pico"><a href="#supportingDesigners">Supporting designers</a></h2>
   </div>
@@ -183,12 +183,12 @@ Sometimes this created the need for new components. If that happened, we'd discu
     {{ c.image(images.bookshelves.url,images.bookshelves.caption,['bleed-start']) }}
   </div>
 </section>
-<section class="container space--grande">
+<section class="space--grande">
   <div class="grid grid--cinched">
     {{ c.quote(quotes.rachel.content,quotes.rachel.cite) }}
   </div>
 </section>
-<section class="container space--grande" id="guidingDesign">
+<section class="space--grande" id="guidingDesign">
   <div class="grid">
     <h2 class="marker marker--number space--pico"><a href="#guidingDesign">Guiding design</a></h2>
   </div>
@@ -202,7 +202,7 @@ Sometimes this created the need for new components. If that happened, we'd discu
     {{ c.prose(guidingDesign2) }}
   </div>
 </section>
-<section class="container space--grande" id="designTools">
+<section class="space--grande" id="designTools">
   <div class="grid">
     <h2 class="marker marker--number space--pico"><a href="#designTools">Design tools</a></h2>
   </div>
@@ -213,7 +213,7 @@ Sometimes this created the need for new components. If that happened, we'd discu
     {{ c.image(images.designSystem.url,images.designSystem.caption,['bleed-start']) }}
   </div>
 </section>
-<section class="container space--grande container--decoration-highlight" id="outcomes">
+<section class="space--grande container--decoration-highlight" id="outcomes">
   <div class="grid">
     <h2 class="marker marker--number space--pico"><a href="#outcomes">Outcomes</a></h2>
   </div>
@@ -221,7 +221,7 @@ Sometimes this created the need for new components. If that happened, we'd discu
     {{ c.outcomes(outcomes) }}
   </div>
 </section>
-<section class="container space--grande">
+<section class="space--grande">
   <div class="grid grid--cinched">
     {{ c.quote(quotes.joe.content,quotes.joe.cite) }}
   </div>
