--- a/_source/articles.njk
+++ b/_source/articles.njk
@@ -3,3 +3,6 @@ layout: default.njk
 title: Articles
 ---
 {% import "./_includes/components.njk" as c %}
+{%- for article in collections.article -%}
+  <h2><a href="{{ article.url }}">{{ article.data.title }}</a></h2>
+{%- endfor -%}
