--- a/_source/less/_typography.less
+++ b/_source/less/_typography.less
@@ -63,8 +63,8 @@
             font-size: unit(16/@base,rem);
             line-height: 24 / 16;
             .break-min({
-                font-size: unit(18/@base,rem);
-                line-height: 30 / 18;
+                font-size: unit(19/@base,rem);
+                line-height: 34 / 19;
             });
         }
         .small() {
@@ -230,12 +230,12 @@ body {
         margin-top: unit(2/@base,rem);
     }
     p, ol, ul, h2, h3, h4, h5, h6, time {
-        margin-bottom: unit(12/@base,rem);
+        margin-bottom: unit(@gap/2/@base,rem);
     }
     p+h2, ul+h2, ol+h2,
     p+h3, ul+h3, ol+h3 {
-        margin-top: unit(@gap/@base,rem);
-        margin-top: var(--gap);
+        margin-top: unit(@gap*2/@base,rem);
+        margin-top: calc(var(--gap) * 2);
     }
 
     
