--- a/_source/articles.njk
+++ b/_source/articles.njk
@@ -3,6 +3,15 @@ layout: default.njk
 title: Articles
 ---
 {% import "./_includes/components.njk" as c %}
-{%- for article in collections.article -%}
-  <h2><a href="{{ article.url }}">{{ article.data.title }}</a></h2>
+<div class="grid grid--thirds space--alto">
+{% set colors = cycler("odd", "even") %}
+{%- for article in collections['articles'] -%}
+  {{ c.card({
+    title: article.data.title,
+    url: article.url,
+    content: '',
+    cta: article.data.title,
+    classes: 'sm'
+  }) }}
 {%- endfor -%}
+</div>
