--- a/_source/less/layout/grid.less
+++ b/_source/less/layout/grid.less
@@ -34,10 +34,17 @@
                 flex-basis: 30%;
             }
         }
+        &--thin-fat {
+          >*:nth-child(2n-1) {
+                flex-basis: 30%;
+            }
+            >*:nth-child(2n) {
+                flex-basis: 50%;
+            }
+        }
         &--halves,
         &--split-halves,
-        &--showcase,
-        &--prose {
+        &--showcase {
             >* {
                 flex-basis: 45%;
                 margin-bottom: 0;
@@ -124,6 +131,16 @@
             }
         }
 
+        .grid--thin-fat {
+          >*:nth-child(2n-1) {
+                grid-column: 1 / span 2;
+            }
+            >*:nth-child(2n) {
+                grid-column: 3 / span 6;
+            }
+        }
+        
+
         .grid--showcase {
             >*:nth-child(2n-1) {
                 grid-column: 1 / span 3;
@@ -186,6 +203,16 @@
                 grid-column: 7 / span 2;
             }
         }
+
+        .grid--thin-fat {
+          >*:nth-child(2n-1) {
+                grid-column: 2 / span 1;
+            }
+            >*:nth-child(2n) {
+                grid-column: 3 / span 6;
+            }
+        }
+
         .grid--halves {
             >*:nth-child(2n-1) {
                 grid-column: 2 / span 3;
