--- a/_source/less/modules/card.less
+++ b/_source/less/modules/card.less
@@ -88,6 +88,7 @@
     &__cta {
         color: @c_grey_x-dark;
         #type > #size > .regular;
+        line-height: 1;
         display: flex;
         align-items: center;
 
