--- a/_source/_layouts/_site-wrapper.njk
+++ b/_source/_layouts/_site-wrapper.njk
@@ -52,10 +52,10 @@
     <div class="footer__content">
         <p class="footer__copyright">&copy; 2001-{% today 'YYYY' %} <strong>Jon Roobottom</strong></p>     
         <ul class="footer__social">
-            <li><a href="https://github.com/roobottom" title="Jon Roobottom's Github profile">{{ c.icon('github') }}</a></li>
-            <li><a href="https://medium.com/@roobottom" title="Jon Roobottom's articles on Medium">{{ c.icon('medium') }}</a></li>
-            <li><a href="https://www.linkedin.com/in/roobottom/" title="Jon Roobottom's LinkedIn profile">{{ c.icon('linkedin') }}</a></li>
-            <li><a href="https://twitter.com/roobottom" title="Jon Roobottom's Twitter profile">{{ c.icon('twitter') }}</a></li>
+            <li><a href="https://github.com/roobottom" title="Jon Roobottom's Github profile" rel="me">{{ c.icon('github') }}</a></li>
+            <li><a href="https://medium.com/@roobottom" title="Jon Roobottom's articles on Medium" rel="me">{{ c.icon('medium') }}</a></li>
+            <li><a href="https://www.linkedin.com/in/roobottom/" title="Jon Roobottom's LinkedIn profile" rel="me">{{ c.icon('linkedin') }}</a></li>
+            <li><a href="https://twitter.com/roobottom" title="Jon Roobottom's Twitter profile" rel="me">{{ c.icon('twitter') }}</a></li>
         </ul>
     </div>
   </footer>
