--- a/_source/less/roodesign.less
+++ b/_source/less/roodesign.less
@@ -17,6 +17,7 @@
 @import 'components/hero';
 @import 'components/frame';
 @import 'components/screenshots';
+@import 'components/prevNext';
 
 //modules
 @import 'modules/navigation';
