--- a/_source/_layouts/_site-wrapper.njk
+++ b/_source/_layouts/_site-wrapper.njk
@@ -10,6 +10,8 @@
     <title>{{ title }} / Roodesign</title>
     <link href="/assets/roodesign.css" rel="stylesheet"/>
     <link rel="shortcut icon" type="image/x-icon" href="/assets/favicon.ico">
+    <link rel="webmention" href="https://webmention.io/roodesign.co.uk/webmention" />
+    <link rel="pingback" href="https://webmention.io/roodesign.co.uk/xmlrpc" />
     {% if headEnd %}
     {{ headEnd | safe }}
     {% endif %}
