--- a/_source/_layouts/article.njk
+++ b/_source/_layouts/article.njk
@@ -1,5 +1,16 @@
 {% extends "./_site-wrapper.njk" %}
 
+{% set count = 0 %}
+{% set prevPage = null %}
+{% set nextPage = null %}
+{%- for article in collections[currentCollection] %}
+  {% if article.url == page.url %}
+    {% set prevPage = collections[currentCollection][count - 1] %}
+    {% set nextPage = collections[currentCollection][count + 1] %}
+  {% endif %}
+  {% set count = count + 1 %}
+{% endfor -%}
+
 {% block header %}
   <div class="grid grid--cinched space--alto">
     <h1 class="bleed--start">{{ title }}</h1>
@@ -11,11 +22,29 @@
   <div class="grid grid--thin-fat">
     <dl class="meta">
       <dt class="meta__title">Date</dt>
-      <dd class="meta__value space--pico"><p>{{ date | date("DD MMM YYYY") }}</p></dd>
+      <dd class="meta__value space--pico"><p>{{ date | date("dddd Do MMMM YYYY") }}</p></dd>
       <dt class="meta__title">Author</dt>
       <dd class="meta__value space--pico">Jon Roobottom</dd>
     </dl>
     {{ c.prose(content,['prose--article']) }}
+  </div>
+  <div class="grid grid--prose space--margin-top-1">
+    <nav class="prevNext separator space--padding-top-1" aria-label="Pagination" role="navigation">
+      <ul class="prevNext__list">
+        {% if prevPage %}
+        <li class="prevNext__item prevNext__item--prev">
+          <span class="prevNext__itemLabel">Previously:</span>
+          <a href="{{ prevPage.url }}" rel="prev" class="prevNext__link">{{ prevPage.data.title }}</a>
+        </li>
+        {% endif %}
+        {% if nextPage %}
+        <li class="prevNext__item prevNext__item--next">
+          <span class="prevNext__itemLabel">Next up:</span>
+          <a href="{{ nextPage.url }}" rel="next" class="prevNext__link">{{ nextPage.data.title }}</a>
+        </li>
+        {% endif %}
+      </ul> 
+    </nav>
   </div>
 </main>
 {% endblock %}
