--- a/_source/less/_typography.less
+++ b/_source/less/_typography.less
@@ -338,11 +338,32 @@ body {
 
     &--article {
 
+      //styling for article elements at any breakpoint
       figure {
         #figure > .default;
         >img.stage {
           #figure > .stage;
         }
+      }
+      blockquote { 
+        padding-left: 1.5*@gap-rem;
+        margin-left: @gap-rem;
+        position: relative;
+
+        &:after {
+          content: "";
+          display: block;
+          width: 2*@gap-rem;
+          height: 2*@gap-rem;
+
+          position: absolute;
+          left: -1 * @gap-rem;
+          top: -.25 * @gap-rem;
+          background: url('@{img_path}quote-splodge.svg') top left no-repeat;
+          background-size: contain;
+        }
+        > p { font-style: italic; }
+
       }
 
       .break-min({
@@ -357,6 +378,7 @@ body {
         }
       });
 
+
       //add auto layout to article prose
       .break-mid({
         display: grid;
@@ -365,13 +387,14 @@ body {
         grid-template-columns: repeat(6, 1fr);
 
         > p, > ol, > ul,
-        h1, h2, h3, h4, h5, h6 {
+        h1, h2, h3, h4, h5, h6,
+        blockquote {
           grid-column: 1 / span 5;
         }
       });
       .break-max({  
         > p, > ol, > ul,
-        h1, h2, h3, h4, h5, h6 {
+        h1, h2, h3, h4, h5, h6, blockquote {
           grid-column: 1 / span 4;
         }
         figure {
