--- a/_source/less/_util.less
+++ b/_source/less/_util.less
@@ -5,3 +5,7 @@
         transition-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1.275);
     }
 }
+
+.separator {
+  border-top: 4px solid @c_yellow;
+}
