--- a/_source/less/components/quote.less
+++ b/_source/less/components/quote.less
@@ -1,4 +1,4 @@
-.quote {
+.quote() {
     box-sizing: border-box;
     position: relative;
 
@@ -34,4 +34,8 @@
         align-self: end;
         font-style: normal;
     }
+}
+
+.quote {
+  .quote;
 }
