stubbing out design system

--- a/_source/_less/layout/grid.less
+++ b/_source/_less/layout/grid.less
@@ -131,7 +131,8 @@
             }
         }
 
-        .grid--thin-fat {
+        .grid--thin-fat,
+        .grid--thin-fat-wide {
           >*:nth-child(2n-1) {
                 grid-column: 1 / span 2;
             }
