updated articles and back-filled old content

--- a/_source/_includes/components.njk
+++ b/_source/_includes/components.njk
@@ -78,7 +78,9 @@
     {% if data.date %}
     <time class="card__date" datetime="{{ data.date }}">{{ data.date | date }}</time>
     {% endif %}
-    {{ prose(data.content) }}
+    <div class="card__prose">
+      {{ data.content | safe }}
+    </div>
   </div>
     
   {% if data.footer %}
