--- a/_source/_less/modules/card.less
+++ b/_source/_less/modules/card.less
@@ -66,6 +66,10 @@
         //display: block;
     }
 
+    &__prose {
+      #type > #size > .compact;
+    }
+
     &__date { //date is a child of __content
       #type > #size > .small;
       display: block;
