--- a/_source/_less/modules/navigation.less
+++ b/_source/_less/modules/navigation.less
@@ -11,6 +11,9 @@
     a {
         text-decoration: none;
         color: @c_grey_x-dark;
+        &:focus {
+            outline: 3px solid @c_yellow;
+        }
     }
 
     .active {
