--- a/_source/case-studies.njk
+++ b/_source/case-studies.njk
@@ -10,7 +10,9 @@ title: Case studies
     title: study.data.title,
     url: study.url,
     content: study.data.preface,
-    cta: study.data.cta
+    cta: study.data.cta,
+    color: study.data.color,
+    cover: study.data.cover
   }) }}
 {%- endfor -%}
 </div>
