--- a/_source/case-studies/onalytica.njk
+++ b/_source/case-studies/onalytica.njk
@@ -2,15 +2,16 @@
 title: Helping a team achieve design process nirvana
 date_start: 2018-11-01
 date_end: 2019-02-28
+date: 2019-02-28
 roles:
   - Product and process review
   - Hands-on design and code
   - Pattern library creation
-color: green
+color: purple
 cta: 'See how I helped Onalytica'
-cover: 
+cover: /assets/images/case-studies/onalytica/cover.png
 preface: |
-  I helped Onalytica's design and product teams improve processes and kick-start a standardised approach to interface design.
+  I helped Onalytica’s design and product teams improve processes and kick-start a standardised approach to interface design.
 images:
   testing:
     url: /assets/images/case-studies/onalytica/user-testing.jpg
