--- a/_source/_less/layout/grid.less
+++ b/_source/_less/layout/grid.less
@@ -159,7 +159,8 @@
         }
 
         .grid--halves,
-        .grid--split-halves {
+        .grid--split-halves,
+        .grid--thirds {
             >*:nth-child(2n-1) {
                 grid-column: 1 / span 4;
             }
@@ -241,6 +242,12 @@
         }
 
         .grid--thirds {
+            >*:nth-child(2n-1) {
+                grid-column: span 2;
+            }
+            >*:nth-child(2n) {
+                grid-column: span 2;
+            }
             >*:nth-child(3n-2) {
                 grid-column: 2 / span 2;
             }
