--- a/_source/_less/modules/card.less
+++ b/_source/_less/modules/card.less
@@ -57,10 +57,16 @@
       
     }
 
+    &__cover {
+      img {
+        display: block;
+        max-width: 100%;
+      }
+    }
+
     &__content,
     &__footer,
-    &__cta,
-    &__cover {
+    &__cta {
         padding: unit(@gap * 1.5 / @base,rem);
         padding: ~"var(--gap) calc( var(--gap) * 1.5)";
         //display: block;
@@ -82,14 +88,9 @@
     }
     
 
-    &--tight &__cover {
-      padding: 0;
-    }
-
     &.sm &__content,
     &.sm &__footer,
-    &.sm &__cta,
-    &.sm &__cover {
+    &.sm &__cta {
         padding: unit(@gap / @base,rem);
         padding: ~"var(--gap)";
         //display: block;
@@ -111,6 +112,10 @@
             left: 0;
             width: 100%;
             height: 100%;
+        }
+
+        &:focus {
+          outline: 3px solid @c_yellow;
         }
 
         .icon {
