--- a/_source/case-studies/firefly.njk
+++ b/_source/case-studies/firefly.njk
@@ -2,11 +2,13 @@
 title: Leading design at Firefly
 date_start: 2014-09-01
 date_end: 2018-10-30
+date: 2018-10-30
 roles:
   - Design team leadership
   - Hands-on design and code
   - Management team
-color: red
+color: green
+cover: /assets/images/case-studies/firefly/cover.png
 cta: 'See how I helped Firefly'
 preface: |
   For 4 years I led the design team at Firefly Learning. We helped thousands of teachers, students and parents to teach and learn from anywhere.
