--- a/_source/_layouts/case-study.njk
+++ b/_source/_layouts/case-study.njk
@@ -11,8 +11,10 @@
     <dl class="meta">
       <dt class="meta__title">Dates</dt>
       <dd class="meta__value space--pico"><p>{{ date_start | date("MMM YYYY") }} - {{ date_end | date("MMMM YYYY") }}</p></dd>
-      <dt class="meta__title">My role</dt>
-      <dd class="meta__value"><p>{% for role in roles %}{{ role }}{% if not loop.last %}<br>{% endif %}{% endfor %}</p></dd>
+      <dt class="meta__title">What I did</dt>
+      <dd class="meta__value"><ul>{% for role in roles %}
+        <li>{{ role }}</li>
+      {% endfor %}</ul></dd>
     </dl>
   </div>
 {% endblock %}
