--- a/_source/_less/components/figure.less
+++ b/_source/_less/components/figure.less
@@ -79,6 +79,11 @@
       box-shadow: 0 0 10px black;
   }
 
+  //shadow
+  &--shadow &__images > img {
+    box-shadow: 0 0 10px fade(black,30%); 
+  }
+
   //colours
   &--green &__images {
       background-color: @c_green_light;
