--- a/_source/_less/components/screenshots.less
+++ b/_source/_less/components/screenshots.less
@@ -43,14 +43,14 @@
     });
   }
 
-  &--phone-laptop &__images {
+  &--laptop-phone &__images {
     
     .screenshot--phone {
       display: none;
     }
     .break-min({
       .phone-laptop();
-      .sccrenshot--phone {
+      .screenshot--phone {
         display: block;
       }
     });
