--- a/_source/_less/_typography.less
+++ b/_source/_less/_typography.less
@@ -236,7 +236,8 @@ body {
         #type > #size > .regular;
     }
     .lead,
-    &--lead p {
+    &--lead p,
+    &--lead p>a {
         #type > #size > .large;
         color: @c_grey_dark;
     }
