updated Statamic URL

--- a/_source/proposals/finance-box.njk
+++ b/_source/proposals/finance-box.njk
@@ -19,7 +19,7 @@ You'll notice that this isn't your usual proposal. You won't find much in the wa
 Fixed costs: 
 
 * Design and development of a website: £4,250 + VAT
-* [Statamic CMS](https://statamic.dev/): $259
+* [Statamic CMS](https://statamic.com/): $259
 
 Ongoing costs:
 
@@ -69,7 +69,7 @@ Fixed costs:
 * Brand discovery and design: £5,750 + VAT
 * Marketing strategy and asset production: To be discussed
 * Design and development of a website: £4,250 + VAT
-* [Statamic CMS](https://statamic.dev/): $259
+* [Statamic CMS](https://statamic.com/): $259
 
 Ongoing costs:
 
