--- a/_source/proposals/finance-box.njk
+++ b/_source/proposals/finance-box.njk
@@ -2,7 +2,7 @@
 title: Fiance Box
 layout: proposal.njk
 preface: |
-  A prosal for **Finace Box** by **Roodesign Ltd**. 
+  A prosal for **Finance Box** by **Roodesign Ltd**. 
   Made on 23 November 2020.
 ---
 {% set content %}
