--- a/_source/_less/components/figure.less
+++ b/_source/_less/components/figure.less
@@ -44,6 +44,12 @@
       grid-template-columns: repeat(auto-fit,minmax(@min,1fr));
   }
 
+  //single row gallery
+  &--single-row&--gallery &__images {
+    display: flex;
+    
+  }
+
   //full
   &--full &__images > img {
       width: 100%;
