--- a/_source/work/vat-repayment-tracker.njk
+++ b/_source/work/vat-repayment-tracker.njk
@@ -3,11 +3,14 @@ title: Helping tax payers when they’re due a refund
 date_start: 2019-04-18
 date_end: 2019-11-01
 date: 2019-11-01
+tags:
+  - case study
 roles:
   - Interaction design
   - Service design
   - Front-end development
-colour: blue
+color: yellow
+cover: /assets/images/case-studies/vat-repayment-tracker/vrt-cover.png
 cta: 'See how I helped the tax payer'
 preface: I helped HMRC to better serve the UK citizen by designing a service that lets tax payers track VAT repayments
 images:
