--- a/_source/_less/components/figure.less
+++ b/_source/_less/components/figure.less
@@ -55,6 +55,16 @@
       width: 100%;
   }
 
+  //rotations
+  &--rotate-right &__images > img {
+    transform: rotate(2deg);
+  }
+
+  &--rotate-left &__images > img {
+    transform: rotate(-2deg);
+  }
+
+
   //bleed
   .break-mid({
       &--bleed-start &__images,
@@ -87,7 +97,7 @@
 
   //shadow
   &--shadow &__images > img {
-    box-shadow: 0 0 10px fade(black,30%); 
+    box-shadow: 0 0 10px fade(black,15%); 
   }
 
   //colours
